--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,25 @@
 # ホワイトリスト
+# Ignore everything
 *
-!*/
 
 # Allowlist
-
 !.gitignore
-
 !/paper-1.21.1-131.jar
 !/start.bat
 !/readme.md
 
+# Allow specific plugins and their directories
+!plugins/
 !plugins/BetterStructures.jar
 !plugins/FastAsyncWorldEdit-Bukkit-2.12.1-SNAPSHOT-965.jar
 !plugins/multiverse-portals-4.2.3.jar
 !plugins/Terra-bukkit-6.5.1-BETA+0a952cff4-shaded.jar
 !plugins/worldguard-bukkit-7.0.12-dist.jar
-!plugins/BetterStructures/schematics
-!plugins/BetterStructures/generators
-!plugins/BetterStructures/treasures
+!plugins/multiverse-core-4.3.14.jar
 
+# Allow specific file types and directories
+!.yml
+!.schem
+!plugins/BetterStructures/schematics/**
+!plugins/BetterStructures/generators/**
+!plugins/BetterStructures/treasures/**
