--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,6 @@
 !plugins/multiverse-core-4.3.14.jar
 
 # Allow specific file types and directories
-!.yml
-!.schem
-!plugins/BetterStructures/schematics/**
-!plugins/BetterStructures/generators/**
-!plugins/BetterStructures/treasures/**
+!plugins/BetterStructures/schematics/
+!plugins/BetterStructures/generators/
+!plugins/BetterStructures/treasures/
